[project]
name = "nist-img"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaeho Cho",email = "jaeho2025@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
